--- a/example/index.html
+++ b/example/index.html
@@ -5,10 +5,12 @@
     <title>Carousel Example</title>
 
     <link href="http://cdn.sencha.io/ext-4.1.1-gpl/resources/css/ext-all.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="http://cdn.sencha.com/ext/trial/5.0.0/build/packages/ext-theme-classic/build/resources/ext-theme-classic-all.css">
     <link rel="stylesheet" href="../resources/css/carousel.css" />
     <link rel="stylesheet" href="resources/css/example.css" />
     
-    <script src="http://cdn.sencha.io/ext-4.1.1-gpl/ext-all.js" type="text/javascript"></script>
+    <script src="http://cdn.sencha.com/ext/trial/5.0.0/build/ext-all-debug.js" type="text/javascript"></script> 
+    <script src="http://cdn.sencha.com/ext/trial/5.0.0/build/packages/ext-charts/build/ext-charts.js" type="text/javascript"></script>
     <script src="source/store/Demo.js" type="text/javascript"></script>
     <script src="source/store/Slide.js" type="text/javascript"></script>
     <script src="../source/carousel/Model.js" type="text/javascript"></script>
