--- a/example/index.html
+++ b/example/index.html
@@ -4,12 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Carousel Example</title>
 
-    <link rel="stylesheet" type="text/css" href="http://cdn.sencha.com/ext/gpl/5.0.1/build/packages/ext-theme-classic/build/resources/ext-theme-classic-all.css">
+    <link rel="stylesheet" type="text/css" href="http://cdn.sencha.com/ext/gpl/5.1.0/build/packages/ext-theme-classic/build/resources/ext-theme-classic-all.css">
     <link rel="stylesheet" href="../resources/css/carousel.css" />
     <link rel="stylesheet" href="resources/css/example.css" />
     
-    <script src="http://cdn.sencha.com/ext/gpl/5.0.1/build/ext-all.js" type="text/javascript"></script> 
-    <script src="http://cdn.sencha.com/ext/gpl/5.0.1/build/packages/ext-charts/build/ext-charts.js" type="text/javascript"></script>
+    <script src="http://cdn.sencha.com/ext/gpl/5.1.0/build/ext-all-debug.js" type="text/javascript"></script> 
+    <script src="http://cdn.sencha.com/ext/gpl/5.1.0/build/packages/sencha-charts/build/sencha-charts.js" type="text/javascript"></script>
     <script src="source/store/Demo.js" type="text/javascript"></script>
     <script src="source/store/Slide.js" type="text/javascript"></script>
     <script src="../source/carousel/Model.js" type="text/javascript"></script>
