--- a/example/index.html
+++ b/example/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/packages/charts/classic/charts-debug.js" type="text/javascript"></script>
     <script src="source/store/Demo.js" type="text/javascript"></script>
     <script src="source/store/Slide.js" type="text/javascript"></script>
+    <script src="../source/carousel/data/field/Timestamp.js" type="text/javascript"></script>
     <script src="../source/carousel/Model.js" type="text/javascript"></script>
     <script src="../source/carousel/slide/Model.js" type="text/javascript"></script>
     <script src="../source/carousel/View.js" type="text/javascript"></script>
